# tcpinference

./: .gitignore  README.md  image_receiver_server.py  setup.py  tcpviewer.py
buffercom/: CMakeLists.txt  buffercom.cpp  buffercom.h  buffercom_test.cpp  buffercom_test.h  rawbyte.cpp  rawbyte.h
buffercom_python/: buffercom.py  test_buffercom.py
tcpinference/: __init__.py  camera_client.py  camera_server.py  client_example.py  tcpclient.py  tcpserver.py  utils.py  visualization_server.py
